2009-07-17  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/status_monitor.php: fix bug default group in form.

2009-07-17  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/modificar_agente.php: fix bug that appear two times the
	group "All".
	Fixes: #2822999

2009-07-16  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_networkmap.php: Added to repository. Functions used
	  to draw network maps.

	* operation/agentes/networkmap.php: Moved network map generation
	  functions to functions_networkmap.php.

2009-07-16  Pablo de la Concepcipón <pablo.concepcion@artica.es>

	*  include/functions_agents.php: fixed repeated empty test and safe_int call

2009-07-16  Jorge Gonzalez  <jorgegonz@atica.es>

	* godmode/servers/manage_recontask_form.php: fixed wrong group
	  assignation.

2009-07-16  Jorge Gonzalez  <jorgegonz@artica.es>

	* godmode/servers/manage_recontask_form.php: fixed wrong period
	  strings.

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	translation.

	* include/languages/index.pot: Updated po template.

2009-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_modules.php: fix bug that the function
	copy_agent_module_to_agent didn't copy the modules what was previus
	delete.

2009-07-16  Jorge Gonzalez  <jorgegonz@artica.es>

	* godmode/servers/manage_recontask_form.php: Changed sql query to
	  remove "All" os from the recon task selection form.

2009-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* Changelog: date error in last change.

2009-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/db/db_sanity.php: remove "cambio" column in query, this column use
	in old version of pandora (read pandoradb_migrate_v2.x_to_v3.0.sql line 20).
	Fixes: #2810974

2009-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/manage_config_remote.php: fix name of colums in query.

2009-07-09  Manuel Arostegui <manuel@todo-linux.com>
